# ThreadX-on-Pi-Pico-RP2040

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  data_exchange.md  main.c  note_segger  pico
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
app/: CMakeLists.txt  app_main.c  hw_config.c
config/: nx_user_config.h
demo_filex/: CMakeLists.txt  demo_filex.c
demo_netx/: CMakeLists.txt  README.md
demo_netx/adu_agent_test/: CMakeLists.txt  README.md  adu_agent_test.c  demo_update_bin.h  nx_azure_iot_adu_agent_driver_pico_w.c
demo_netx/demo_azure_iot/: CMakeLists.txt  README.md  demo_azure_iot.c  nx_azure_iot_adu_agent_driver_pico_w.c  sample_azure_iot_embedded_sdk_adu.c
demo_netx/demo_netx_modbus_tcp/: CMakeLists.txt  demo_netx_tcp.c  note
demo_netx/demo_netx_ping/: CMakeLists.txt  README.md  demo_netx_ping.c
demo_netx/demo_netx_tcp/: CMakeLists.txt  demo_netx_tcp.c
demo_netx/flash_loader/: CMakeLists.txt  README.md  flash_loader.cmake  memmap_default.ld
demo_netx/nx_driver/: CMakeLists.txt  README.md  nx_driver_framework.c  nx_driver_framework.h  nx_driver_pico_w.c  nx_driver_pico_w.h
demo_threadx/: CMakeLists.txt  README.md  demo_threadx.c
